# pdfsniffer

./: .gitignore  README.md  pyproject.toml
src/: analysis.ipynb  pdfsniffer.py  scanner.py
