[project]
name = "static-pdf-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "duckdb>=1.4.0",
    "pandas>=2.3.3",
    "pikepdf>=9.11.0",
    "pypdf2>=3.0.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
